--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             yesButton.style.transform = `translateX(-${buttonWidth / 2}px)`;
             
             // Center the text within the button
-            yesButton.style.textAlign = "50%";
-            yesButton.style.lineHeight = `${yesButton / 2}px`;
+            yesButton.style.textAlign = "center";
+            yesButton.style.lineHeight = `${yesButton / 2 - 12.5}px`;
 
             // make text button get bigger
             const currentFontSize = parseInt(window.getComputedStyle(yesButton).fontSize);
