--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         <center>  
             <img id="im" src="https://i.pinimg.com/originals/c0/be/cc/c0becc3b682d092c7394080862fd47f9.gif" alt="GIF" style="margin-top: 20px;">
             <h1 style="color:black;margin-top:20px">เป็นแฟนกันมั้ย?</h1>
-            <p style="color:black;margin-top:10px">หากตกลงขอให้กดปุ่ม "Yes!" แล้วเราจะขอสัญญาว่าจะรัก ดูแลและมีแค่แกคนเดียวตลอดไป</p>
+            <p style="color:black;margin-top:10px">หากตกลงขอให้กดปุ่ม "Yes!" แล้วเราจะขอสัญญาว่าจะรัก ดูแลและมีแค่ส้มซ่าคนเดียวตลอดไป</p>
             <input class="but no" id="but" type="button" value="No" onmouseover="no()" onclick="no()"/>
             <input class="but yes" id="but" type="button" value="yes" onclick="yes()"/>
 
-            <p style="color:black;margin-top:200px">Made By Overflow</p>
+            <p style="color:black;margin-top:200px">Made By Pun/p>
 
         </center>
         <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
