--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <title>Will You Be My Valentine?</title>
         <style>
             .but {
                 position: absolute;
@@ -64,7 +65,7 @@
             <input class="but no" id="but" type="button" value="No" onmouseover="no()" onclick="no()"/>
             <input class="but yes" id="but" type="button" value="yes" onclick="yes()"/>
 
-            <p style="color:black;margin-top:200px">Made By Pun</p>
+            <p style="color:black;margin-top:200px">Made By Overflow</p>
 
         </center>
         <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
