--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     font-family: Arial, sans-serif;
   }
   .black-banner {
-    background-image: url('bg.jpg');
+    background-image: url('https://cdn.discordapp.com/attachments/733512116295827557/1228046657183154176/bg.jpg?ex=662a9e93&is=66182993&hm=78c49e4de6aadc903c87ab567b52b3f000f473fd4d33aa44b24733245321eb73&');
     background-size: cover;
     background-position: center;
     color: white;
