Game KhumThongChume.html

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <body>
     <div class="container">
         <h1>ตรวจสอบคำซ้ำ</h1>
-        <footer>เกมคำต้องเชื่อม</footer>
+        <footer>เกมคำต้องเชื่อม - เทพลีลา</footer>
         <p>หากมีมากกว่า 1 พยางค์ให้เว้นวรรคแยกให้ชัดเจนเช่น "กำ แพง เพชร"</p>
         <input type="text" id="inputWord" placeholder="กรุณาป้อนคำ">
         <button onclick="checkDuplicates()">ตรวจสอบ</button>
