Game KhumThongChume.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         .container {
             text-align: center;
             background-color: #ffffff;
+            background-image: url('https://media.discordapp.net/attachments/1288325589991821334/1288330123761815633/logo.png?ex=66f4ca6d&is=66f378ed&hm=3ee1a948150dca5234f5336c37298e7ecb28d1bebcc5a0796d4ac866519d3953&=&format=webp&quality=lossless&width=281&height=281');
+            background-size: cover; /* ปรับให้ภาพครอบคลุมพื้นที่เต็มหน้าจอ */
+            background-position: center; /* วางภาพให้อยู่ตรงกลาง */
+            background-repeat: no-repeat; /* ไม่ให้ภาพซ้ำ */
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
