--- a/index.html
+++ b/index.html
@@ -8,33 +8,37 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #e1b1ff;
-            background-image: url('https://cdn.discordapp.com/attachments/1288325589991821334/1288325692819247137/bg1.jpg?ex=66f4c64d&is=66f374cd&hm=c32db67ba35446eb08ba76a168bf46d872b8778d3027e340a92610899ffac06f&'); /* ใส่ URL ของภาพที่ต้องการ */
-            background-size: cover; /* ปรับให้ภาพครอบคลุมพื้นที่เต็มหน้าจอ */
-            background-position: center; /* วางภาพให้อยู่ตรงกลาง */
-            background-repeat: no-repeat; /* ไม่ให้ภาพซ้ำ */
+            background-image: url('https://cdn.discordapp.com/attachments/1288325589991821334/1288325692819247137/bg1.jpg?ex=66f4c64d&is=66f374cd&hm=c32db67ba35446eb08ba76a168bf46d872b8778d3027e340a92610899ffac06f&');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
+            overflow: hidden;
         }
+
         .container {
             text-align: center;
             background-color: #ffffff;
-            background-image: url('https://media.discordapp.net/attachments/1288325589991821334/1288330123761815633/logo.png?ex=66f4ca6d&is=66f378ed&hm=3ee1a948150dca5234f5336c37298e7ecb28d1bebcc5a0796d4ac866519d3953&=&format=webp&quality=lossless&width=281&height=281');
-            background-size: cover; /* ปรับให้ภาพครอบคลุมพื้นที่เต็มหน้าจอ */
-            background-position: center; /* วางภาพให้อยู่ตรงกลาง */
-            background-repeat: no-repeat; /* ไม่ให้ภาพซ้ำ */
+            background-image: url('https://media.discordapp.net/attachments/1288325589991821334/1288330123761815633/logo.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             width: 300px;
-            max-height: 400px; /* Set a fixed height */
-            overflow-y: auto; /* Allow scrolling if content overflows */
+            max-height: 400px;
+            overflow-y: auto;
         }
+
         h1 {
             color: #333;
         }
+
         input {
             width: 80%;
             padding: 10px;
@@ -43,6 +47,7 @@
             margin-bottom: 10px;
             font-size: 16px;
         }
+
         button {
             background-color: #b300ff;
             color: white;
@@ -53,18 +58,22 @@
             font-size: 16px;
             width: 100%;
         }
+
         button:hover {
             background-color: #9b00a6;
         }
+
         #result {
             margin: 10px 0;
             color: red;
         }
+
         ul {
             list-style-type: none;
             padding: 0;
             text-align: left;
         }
+
         li {
             background-color: #f9f9f9;
             margin: 5px 0;
@@ -72,14 +81,33 @@
             border-radius: 4px;
             border: 1px solid #ddd;
         }
+
         footer {
             margin-top: 20px;
             font-size: 14px;
             color: #666;
         }
-        /* Initially hide the previous words section */
+
         .hidden {
             display: none;
+        }
+
+        /* CSS for falling emojis */
+        .emoji {
+            position: absolute;
+            font-size: 2.5em;
+            animation: fall 2s linear forwards;
+        }
+
+        @keyframes fall {
+            0% {
+                top: -10%;
+                opacity: 1;
+            }
+            100% {
+                top: 110%;
+                opacity: 0;
+            }
         }
     </style>
     <script>
@@ -92,56 +120,56 @@
 
             if (userInput.trim() === "") {
                 document.getElementById("result").innerText = "กรุณากรอกคำ";
-                return; // Don't proceed if the input is empty
+                return;
             }
 
-            // Split the input into words based on spaces
             let words = userInput.trim().split(/\s+/);
             let duplicateInfo = [];
 
             words.forEach(word => {
                 if (allWords.has(word)) {
-                    // Find the index of the existing sentence that has the same word
                     let existingSentenceIndex = previousWords.findIndex(sentence => wordToSentenceMap[word] === sentence);
                     duplicateInfo.push({
                         word: word,
                         existingSentence: wordToSentenceMap[word],
-                        existingIndex: existingSentenceIndex + 1 // +1 for 1-based index
+                        existingIndex: existingSentenceIndex + 1
                     });
                 }
             });
 
             if (duplicateInfo.length > 0) {
-                let duplicateText = duplicateInfo.map(info => 
+                let duplicateText = duplicateInfo.map(info =>
                     `[ ${info.word} ] ซ้ำกับคำข้อ ${info.existingIndex}. "${info.existingSentence}"`
                 ).join(", ");
                 document.getElementById("result").innerText = duplicateText;
+
+                // Trigger the emoji rain
+                createEmojiRain();
             } else {
                 document.getElementById("result").innerText = "";
             }
 
             words.forEach(word => {
                 allWords.add(word);
-                wordToSentenceMap[word] = userInput; // Store the mapping of words to sentences
+                wordToSentenceMap[word] = userInput;
             });
 
             previousWords.push(userInput);
             updatePreviousWords();
-            updateFooterText(userInput); // Update footer with the latest input
+            updateFooterText(userInput);
             document.getElementById("inputWord").value = "";
         }
 
         function updatePreviousWords() {
             let wordList = document.getElementById("previousWords");
-            wordList.innerHTML = ""; // Clear previous words
+            wordList.innerHTML = "";
 
             previousWords.forEach((sentence, index) => {
                 let listItem = document.createElement("li");
-                listItem.textContent = `${index + 1}. ${sentence}`; // Add numbering
+                listItem.textContent = `${index + 1}. ${sentence}`;
                 wordList.appendChild(listItem);
             });
 
-            // Show the "คำก่อนหน้า:" section if it's hidden
             if (previousWords.length > 0) {
                 document.getElementById("previousWordsSection").classList.remove("hidden");
             }
@@ -152,12 +180,30 @@
             footerElement.innerText = latestText;
         }
 
+        // Function to create falling emojis
+        function createEmojiRain() {
+            for (let i = 0; i < 100; i++) {
+                let emoji = document.createElement("div");
+                emoji.classList.add("emoji");
+                emoji.innerText = "❌";
+                emoji.style.left = Math.random() * 100 + "vw"; // Random position
+                emoji.style.animationDuration = Math.random() * 1 + 1.5 + "s"; // Random fall duration
+
+                document.body.appendChild(emoji);
+
+                // Remove the emoji after animation ends
+                setTimeout(() => {
+                    emoji.remove();
+                }, 2000);
+            }
+        }
+
         // Add event listener to check for "Enter" key press
         document.addEventListener("DOMContentLoaded", function() {
             document.getElementById("inputWord").addEventListener("keydown", function(event) {
                 if (event.key === "Enter") {
-                    event.preventDefault(); // Prevent form submission (if any)
-                    checkDuplicates(); // Call the function when "Enter" is pressed
+                    event.preventDefault();
+                    checkDuplicates();
                 }
             });
         });
@@ -171,7 +217,6 @@
         <input type="text" id="inputWord" placeholder="กรุณาป้อนคำ">
         <button onclick="checkDuplicates()">ตรวจสอบ</button>
         <p id="result"></p>
-        <!-- Initially hidden section -->
         <div id="previousWordsSection" class="hidden">
             <h2>คำก่อนหน้า:</h2>
             <ul id="previousWords"></ul>
