--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .container {
             text-align: center;
             background-color: #ffffff;
-            background-image: url('https://media.discordapp.net/attachments/1288325589991821334/1288330123761815633/logo.png');
+            background-image: url('https://media.discordapp.net/attachments/1288325589991821334/1288330123761815633/logo.png?ex=66f4ca6d&is=66f378ed&hm=3ee1a948150dca5234f5336c37298e7ecb28d1bebcc5a0796d4ac866519d3953&=&format=webp&quality=lossless&width=281&height=281');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
