--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
         const ranks = ['2', '3', '4', '5', '6', '7', '8', '9', '10', 'J', 'Q', 'K', 'A'];
         const messages = {
             '2': 'หาดูโอ้โดนด้วย',
-            '3': 'หาเพื่อน 2 คนด้วย',
+            '3': 'หาเพื่อน 2 คนโดนด้วย',
             '4': 'เพื่อนฝั่งซ้ายโดน',
             '5': 'ฮาเฮโดนทุกคน',
             '6': 'เพื่อนฝั่งขวาโดน',
-            '7': 'ดวนปอดกับเพื่อน 1 คน',
+            '7': 'ดวลปอดกับเพื่อน 1 คน',
             '8': 'พักผ่อน',
             '9': 'มินิเกม',
             '10': 'เลอะ',
