--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://media.discordapp.net/attachments/1288325589991821334/1298167825126654025/1.jpg?ex=67189480&is=67174300&hm=9f18bea0e76e3b9d87b09465ff59f6765758f4aa26cd68a11609e5fb6e4c5639&=&format=webp&width=468&height=662') no-repeat center;
+            background: url('https://cdn.discordapp.com/attachments/1288325589991821334/1298167825126654025/1.jpg?ex=672efe00&is=672dac80&hm=6ec27d570c1e619dfd82f316c5cc8fb9c9a3eee55c27518390bb26cf2dbec711&') no-repeat center;
             background-size: cover;
             border-radius: 10px;
             transition: opacity 1.5s ease;
