--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://cdn.discordapp.com/attachments/1288325589991821334/1298167825126654025/1.jpg?ex=672efe00&is=672dac80&hm=6ec27d570c1e619dfd82f316c5cc8fb9c9a3eee55c27518390bb26cf2dbec711&') no-repeat center;
+            background: url('https://ibb.co/ggqwQHb') no-repeat center;
             background-size: cover;
             border-radius: 10px;
             transition: opacity 1.5s ease;
