--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://ibb.co/ggqwQHb') no-repeat center;
+            background: url('https://i.postimg.cc/fRRKQbW3/1.jpg') no-repeat center;
             background-size: cover;
             border-radius: 10px;
             transition: opacity 1.5s ease;
