--- a/PueanTaeBook.html
+++ b/PueanTaeBook.html
@@ -73,13 +73,20 @@
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-
+        .text-explain {
+        margin: 0;
+        font-size: 1.2rem;
+        text-align: center;
+        padding: 10px;
+        }
         
 
     </style>
 </head>
 <body>
     <h1>มา!เดี๋ยวช่วยตัดสินใจ</h1>
+    <div class="text-explain">เพียงตั้งคำถามที่คุณตัดสินใจไม่ได้แล้วกดที่ปุ่ม ทางเราจะช่วยให้คำตอบคุณเอง </div>
+    <div class="text-explain">เช่น "วันนี้กินกระเพราดีมั้ย" "ขอคนที่ชอบเป็นแฟนเลยดีหรือป่าว"</div>
 
     <div class="book">
         <div class="book-content" id="book-content">
