--- a/PueanTaeBook.html
+++ b/PueanTaeBook.html
@@ -100,13 +100,13 @@
         const messages = [
             "ลุยโลดเลย", "ทำมันเลย รอไรอยู่ล่ะ", "จัดไป", "เริ่มเลย", "เป็นความคิดที่ดีนะ", "เห็นด้วย!", 
             "เจ๋งว่ะเอาสิ", "ชอบนะน่าลองดู", "เอาดิ", "คิดได้ไงเนี่ย? ทำเลย", "จัด", "เฉยๆว่ะ", 
-            "คิดอีกทีดิ้", "จางๆว่ะ", "คิดใหม่ๆ", "หาตัวเลือกมาดิ้", "กดอีกรอบ", "กดอีก!", 
+            "คิดอีกทีดิ้", "จางๆว่ะ", "คิดใหม่ๆ", "หาตัวเลือกอื่นมาดิ้", "กดอีกรอบ", "กดอีก!", 
             "แย่มากไม่ดี", "ไม่เอาๆ", "ไม่ผ่าน", "เป็นความคิดที่ห่วย", "ไม่น่าทำจัดหาใหม่", 
             "แอ๊ดๆ", "โนเว เลิกคิดเดี๋ยวนี้", "Error", "ถามงี้ ไปนอนแทนเถอะ", "น้ำขึ้นให้รีบตัก", 
             "ดูหนังน่าสนุกนะ", "นั่นสิ ทำดีมั้ย?", "หนีห่าว", "ก็น่าสนใจดีนะ", "เลือกเองเลย", 
             "ตอบไม่ได้ว่ะ", "ไม่รู้เหมือนกัน", "ถ้าวิ่งมันเหนื่อย งั้นมาเดินเรื่อยๆกับเรา", 
             "รักนะ", "ลองดูยัง?ก่อนถาม", "ไม่อะ", "ใช่เลย", "มีล้มก็มีลุก งั้นก็ไปกันต่อ", "ทำไรก็คิดดีๆ"
-            , "ก็น่าสนนะ แต่ยังไม่ใช่ตอนนี้ว่ะๆ", "ลองคิกอย่างอื่นก่อน", "ทำใจดีกว่า ถามงี้", "หรือจะลองไปนั่งสมาธิ?"
+            , "ก็น่าสนนะ แต่ยังไม่ใช่ตอนนี้ว่ะๆ", "ลองคิดอย่างอื่นก่อน", "ทำใจดีกว่า ถามงี้", "หรือจะลองไปนั่งสมาธิ?"
             , "กลับบ้านเถอะ ถ้าอยู่บ้านก็นอนเลย", "เออคำถามนี้ก็น่านใจดีแฮะ", "ไม่รู้ลองถามคนใกล้ๆดู", "งี้ก็ไปกันต่อ"
             , "ชาวบ้านบางระจันยังไม่ย้อท้อเลย ก็ลุยเลยดิ", "ค่อนข้างแย่นะ55 ไม่เอาละกัน", "คิดว่าไม่ควรนะ", "อย่าเลย"
             , "ไม่อ่ะ รีบเปลี่ยนความคิดเลย", "มีเงินก็เก็บๆไว้บ้างนะ", "ชีวิตมีครั้งเดียว เอาสิวะ", "ลุยย","Let's Go ชวยเธอมาขยับครับ In my zone!"
